--- a/frontend/src/style/globals.css
+++ b/frontend/src/style/globals.css
@@ -1,47 +1,59 @@
 body,
 main {
-	/* Fonts */
-	--font-family-primary: 'Helvetica', sans-serif;
+    /* Fonts */
+    --font-family-primary: 'Helvetica', sans-serif;
 
-	--font-size-small: 16px;
-	--font-size-medium: 24px;
-	--font-size-large: 32px;
+    --font-size-small: 16px;
+    --font-size-medium: 24px;
+    --font-size-large: 32px;
 
-	/* Top Level Styles */
+    /* Top Level Styles */
 
-	background-color: var(--color-background);
-	color: var(--color-font);
-	font-family: var(--font-family-primary);
+    background-color: var(--color-background);
+    color: var(--color-font);
+    font-family: var(--font-family-primary);
 
-	/* Gutters */
+    /* Gutters */
 
-	--gutters-y: 12px;
-	--gutters-x: 24px;
-	--header-height: 64px;
+    --gutters-y: 12px;
+    --gutters-x: 24px;
+    --header-height: 64px;
 }
 
 .light-theme {
-	--color-primary-background: #1248c7;
-	--color-primary-font: #fff;
-	--color-primary-border: #3a43b2;
+    --color-primary-background: #1248c7;
+    --color-primary-font: #fff;
+    --color-primary-border: #3a43b2;
 
-	--color-secondary-background: rgba(68, 82, 122, 0.38);
-	--color-secondary-font: #c9c9c9;
-	--color-secondary-border: #50b730;
+    --color-secondary-background: rgba(68, 82, 122, 0.38);
+    --color-secondary-font: #c9c9c9;
+    --color-secondary-border: #50b730;
 
-	--color-background: #e1e1e1;
-	--color-font: #101010;
+    --color-card-background: #d7d0d0;
+    --color-card-font: #121212;
+
+    --color-error-background: #ee8989;
+    --color-error-font: #af1906;
+
+    --color-background: #e1e1e1;
+    --color-font: #101010;
 }
 
 .dark-theme {
-	--color-primary-background: #051a4f;
-	--color-primary-font: #fff;
-	--color-primary-border: #3a43b2;
+    --color-primary-background: #1b3a8d;
+    --color-primary-font: #fff;
+    --color-primary-border: #3a43b2;
 
-	--color-secondary-background: rgba(1, 12, 42, 0.38);
-	--color-secondary-font: #8a8585;
-	--color-secondary-border: #162742;
+    --color-secondary-background: rgba(1, 12, 42, 0.38);
+    --color-secondary-font: #8a8585;
+    --color-secondary-border: #162742;
 
-	--color-background: #111;
-	--color-font: #efefef;
+    --color-card-background: #030a50;
+    --color-card-font: #e7e7e7;
+
+    --color-error-background: #da6b6b;
+    --color-error-font: #af1906;
+
+    --color-background: #111;
+    --color-font: #efefef;
 }
